--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -105,145 +105,25 @@
 
 
   <ion-row style="padding-top: 25%" id="immagrantSlideDeck">
-    <ion-slides id="height90vh" [options]="{centeredSlides: true, slidesPerView: 1.5, zoom: true, grabCursor: true }" pager>
-      <ion-slide id="border5">
-        <ion-col>
+    <swiper [config]="swiperConfig2" id="height90vh">
+      <ng-template *ngFor="let immigrant of immigrants" swiperSlide id="border5">
+        <ion-col >
           <ion-card id="width100">
-            <img src="./assets/albertEinstein.png" />
+            <img src={{immigrant.photo}} />
             <ion-card-header>
-              <ion-card-title id = "immigrant_title">ALBERT EINSTEIN</ion-card-title>
-              <ion-card-subtitle id = "immigrant_subtitle">GERMANY</ion-card-subtitle>
+              <ion-card-title id = "immigrant_title">{{immigrant.name}}</ion-card-title>
+              <ion-card-subtitle id = "immigrant_subtitle">{{immigrant.country}}</ion-card-subtitle>
             </ion-card-header>
             <ion-card-content id = "immigrant_content">
-              One of the most recognized and well-known scientists of the century.
-              His theories solved centuries-old-problems in physics and rocked even non-physicists' view of the world. E= mc2
+              {{immigrant.about}}
             </ion-card-content>
           </ion-card>
         </ion-col>
-      </ion-slide>
-  
-      <ion-slide id="border5">
-        <ion-col>
-          <ion-card id="width100">
-            <img src="./assets/chien-shiungWu.png"/>
-            <ion-card-header>
-              <ion-card-title id = "immigrant_title">CHIEN-SHIUNG WU</ion-card-title>
-              <ion-card-subtitle id = "immigrant_subtitle">CHINA</ion-card-subtitle>
-            </ion-card-header>
-            <ion-card-content id = "immigrant_content">
-              Chinese-American nuclear physicist Chien-Shiung Wu, also known as "the First Lady of Physics,” contributed to the Manhattan Project and made history with an experiment that disproved the hypothetical law of conservation of parity.
-            </ion-card-content>
-          </ion-card>
-        </ion-col>
-      </ion-slide>
-  
-      <ion-slide id="border5">
-        <ion-col>
-          <ion-card id="width100">
-            <img src="./assets/nikolaTesla.png" />
-            <ion-card-header>
-              <ion-card-title id = "immigrant_title">NIKOLA TESLA</ion-card-title>
-              <ion-card-subtitle id = "immigrant_subtitle">SERBIA</ion-card-subtitle>
-            </ion-card-header>
-            <ion-card-content id = "immigrant_content">
-              Futurist who illuminated the earth electrically bright due to his immense contributions in designing the very back-bone of every modern electric supply of today – the alternating current.
-            </ion-card-content>
-          </ion-card>
-        </ion-col>
-      </ion-slide>
-  
-      <ion-slide id="border5">
-        <ion-col>
-          <ion-card id="width100">
-            <img src="./assets/ceciliaPayne.png" />
-            <ion-card-header>
-              <ion-card-title id = "immigrant_title">CECILIA PAYNE</ion-card-title>
-              <ion-card-subtitle id = "immigrant_subtitle">ENGLAND</ion-card-subtitle>
-            </ion-card-header>
-            <ion-card-content id = "immigrant_content">
-              Cecilia Payne discovered that stars are made largely of the two lightest chemical elements – hydrogen and helium. She was the most eminent female astronomer of her time, the first to be appointed full professor at Harvard University, and the first to chair a department.
-            </ion-card-content>
-          </ion-card>
-        </ion-col>
-      </ion-slide>
-  
-      <ion-slide id="border5">
-        <ion-col>
-          <ion-card id="width100">
-            <img src="./assets/bobMarley.png" />
-            <ion-card-header>
-              <ion-card-title id = "immigrant_title">BOB MARLEY</ion-card-title>
-              <ion-card-subtitle id = "immigrant_subtitle">JAMAICA</ion-card-subtitle>
-            </ion-card-header>
-            <ion-card-content id = "immigrant_content">
-              Considered one of the pioneers of reggae music. Bob was a freedom fighter he used his Pen instead of gun. He fought for freedom, peace, and equal rights. Marley received The United Nations Peace Medal. Marley’s “One Love” was proclaimed as Song of the Millennium.
-            </ion-card-content>
-          </ion-card>
-        </ion-col>
-      </ion-slide>
-  
-      <ion-slide id="border5">
-        <ion-col>
-          <ion-card id="width100">
-            <img src="./assets/gertyCori.png" />
-            <ion-card-header>
-              <ion-card-title id = "immigrant_title">GERTY CORI</ion-card-title>
-              <ion-card-subtitle id = "immigrant_subtitle">CZECH</ion-card-subtitle>
-            </ion-card-header>
-            <ion-card-content id = "immigrant_content">
-              Carbohydrate research not only led to the development of treatments for diabetes, it also made them winners of the 1947 Nobel Prize in physiology or medicine, and Gerty the first American woman Nobel laureate in science.
-            </ion-card-content>
-          </ion-card>
-        </ion-col>
-      </ion-slide>
-  
-      <ion-slide id="border5">
-        <ion-col>
-          <ion-card id="width100">
-            <img src="./assets/josephPulitzer.png" />
-            <ion-card-header>
-              <ion-card-title id = "immigrant_title">JOSEPH PULITZER</ion-card-title>
-              <ion-card-subtitle id = "immigrant_subtitle">HUNGARY</ion-card-subtitle>
-            </ion-card-header>
-            <ion-card-content id = "immigrant_content">
-              Best known for the Pulitzer Prizes, which were established in 1917. He was American newspaper editor and publisher who helped to establish the pattern of the modern newspaper. In his time he was one of the most powerful journalists in the United States.
-            </ion-card-content>
-          </ion-card>
-        </ion-col>
-      </ion-slide>
-  
-      <ion-slide id="border5">
-        <ion-col>
-          <ion-card id="width100">
-            <img src="./assets/mariaMayner.png" />
-            <ion-card-header>
-              <ion-card-title id = "immigrant_title">MARIA MAYNER</ion-card-title>
-              <ion-card-subtitle id = "immigrant_subtitle">GERMANY</ion-card-subtitle>
-            </ion-card-header>
-            <ion-card-content id = "immigrant_content">
-              German-born American theoretical physicist, and Nobel laureate in Physics for proposing the nuclear shell model of the atomic nucleus. She was the second woman to win a Nobel Prize in physics, the first being Marie Curie.
-            </ion-card-content>
-          </ion-card>
-        </ion-col>
-      </ion-slide>
-      
-      <ion-slide id="border5">
-        <ion-col>
-          <ion-card id="width100">
-            <img src="./assets/hedyLamarr.png" />
-            <ion-card-header>
-              <ion-card-title id = "immigrant_title">HEDY LAMARR</ion-card-title>
-              <ion-card-subtitle id = "immigrant_subtitle">AUSTRIA</ion-card-subtitle>
-            </ion-card-header>
-            <ion-card-content id = "immigrant_content">
-              Frequency hopping a way of jumping around on radio frequencies in order to avoid a third party jamming your signal. Avid inventor and the person behind advances advances in communication technology that led to today’s Wi-Fi, GPS, and Bluetooth.
-            </ion-card-content>
-          </ion-card>
-        </ion-col>
-      </ion-slide>
-    </ion-slides>
+      </ng-template>
+      <div class="swiper-pagination"></div>
+    </swiper>
   </ion-row>
-
+      
   <!-- Whos helping title-->
   <ion-row id="partners_row">
     <ion-text id= "partners_text">PARTNERS</ion-text>
@@ -257,7 +137,7 @@
       <ion-card-content>
         Take a look at the companies that are supporting diversity in recruitment. They believe everyone should have an equal opportunity to succeed.<br><br>Does your company want to be on this list?
       </ion-card-content>
-      <swiper [config]="swiperConfig">
+      <swiper [config]="swiperConfig" [loop]="true">
         <ng-template swiperSlide>
           <div class="slide-container"><img src="./assets/Alcorn.png"></div>
         </ng-template>
