--- a/src/global.scss
+++ b/src/global.scss
@@ -27,6 +27,8 @@
 
 @import "~swiper/scss";
 @import "~swiper/scss/autoplay";
+@import "~swiper/scss/pagination";
+@import "~swiper/scss/effect-flip";
 
 .flex-container {
     display: flex;
