--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -169,7 +169,7 @@
         </ion-col>
         <ion-col style="height:100%; padding-top:40%; padding-right:5%">
           <ion-card-content style="padding-bottom:30%">
-            <img (click)="initModal()" id="sophie_img" src="./assets/Sophie.png"/>
+            <img (click)="sophieModal()" id="sophie_img" src="./assets/Sophie.png"/>
             <p *ngIf="modalDataResponse">{{modalDataResponse}}</p>
           </ion-card-content>
           <ion-text id="sopie_text">
