--- a/src/app/sophie-modal/sophie-modal.page.scss
+++ b/src/app/sophie-modal/sophie-modal.page.scss
@@ -1,3 +1,8 @@
+#back_button {
+    position: absolute;
+    top:2%;
+    color: black;
+}
 ion-list {  
     &.list-ios {  
         margin-bottom: 0;  
