--- a/src/app/apply-aid/apply-aid.page.html
+++ b/src/app/apply-aid/apply-aid.page.html
@@ -1,356 +1,18 @@
-<ion-content padding>
-  <form [formGroup]="formData" (ngSubmit)="onSubmit()">
-    <ion-list>
-      <ion-item>
-        <ion-button fill=clear [routerLink]="['/tablinks/request-aid']" id="back_button">
-          <ion-icon name="arrow-back"></ion-icon>
-        </ion-button>
-      </ion-item>
-      <ion-item>
-        <ion-title>Personal Information</ion-title>
-      </ion-item>
-      <ion-card>
-        <ion-item>
-          <ion-label>First Name</ion-label>
-          <ion-input
-              required=true
-              formControlName="fName"></ion-input>
-        </ion-item>
-        <ion-item>
-          <ion-label>Family Name</ion-label>
-          <ion-input
-              required=true
-              formControlName="lName"></ion-input>
-        </ion-item>
-        <ion-item>
-          <ion-label>Date of Birth</ion-label>
-          <ion-datetime
-              required=true
-              (ionChange)="getDate($event)"
-              [value]="defaultDate"
-              formControlName="DateOfBirth"></ion-datetime>
-        </ion-item>
-        <ion-item>
-          <ion-label>Email</ion-label>
-          <ion-input
-              type="email"
-              inputmode="email"
-              required=true
-              formControlName="Email"></ion-input>
-        </ion-item>
-        <ion-item>
-          <ion-label>Phone Number</ion-label>
-          <ion-input
-              inputmode="tel"
-              type="tel"
-              required=true
-              formControlName="Phone"></ion-input>
-        </ion-item>
-      </ion-card>
 
-
-      <ion-item>
-        <ion-title>Student Information</ion-title>
-      </ion-item>
-      <ion-card>
-        <ion-item>
-          <ion-label><small>Why do you identify as an international student?</small></ion-label>
-        </ion-item>
-        <ion-item>
-          <ion-textarea
-              required=true
-              formControlName="WhyInternational"></ion-textarea>
-        </ion-item>
-      </ion-card>
-
-      <ion-card>
-        <ion-item>
-          <ion-label><small>Which college or university do you attend?</small></ion-label>
-        </ion-item>
-        <ion-item>
-          <ion-input
-              required=true
-              formControlName="College"></ion-input>
-        </ion-item>
-      </ion-card>
-
-      <ion-card>
-        <ion-item>
-          <ion-label><small>What degree are you seeking?</small></ion-label>
-        </ion-item>
-        <ion-list>
-          <ion-radio-group formControlName="DegreeLevel">
-            <ion-item>
-              <ion-label>Associate Degree</ion-label>
-              <ion-radio value="Associate"></ion-radio>
-            </ion-item>
-            <ion-item>
-              <ion-label>Bachelor Degree</ion-label>
-              <ion-radio value="bachelor"></ion-radio>
-            </ion-item>
-            <ion-item>
-              <ion-label>Master Degree</ion-label>
-              <ion-radio value="master"></ion-radio>
-            </ion-item>
-            <ion-item>
-              <ion-label>Doctoral Degree</ion-label>
-              <ion-radio value="doctoral"></ion-radio>
-            </ion-item>
-            <ion-item>
-              <ion-label>other</ion-label>
-              <ion-radio value="other"></ion-radio>
-            </ion-item>
-          </ion-radio-group>
-        </ion-list>
-        <ion-item>
-          <ion-label><small>If you chose other, specify:</small></ion-label>
-          <ion-input formControlName="DegreeLevel"></ion-input>
-        </ion-item>
-      </ion-card>
-
-      <ion-card>
-        <ion-item>
-          <ion-label><small>What is your field of study?</small></ion-label>
-        </ion-item>
-        <ion-item>
-          <ion-input
-              required=true
-              formControlName="Major"></ion-input>
-        </ion-item>
-      </ion-card>
-
-      <ion-card>
-        <ion-item>
-          <ion-label><small>What is your expected year of graduation?</small></ion-label>
-        </ion-item>
-        <ion-item>
-          <ion-input
-              required=true
-              formControlName="Year"></ion-input>
-        </ion-item>
-      </ion-card>
-
-      <ion-card>
-        <ion-item>
-          <ion-label><small>What is your marital status?</small></ion-label>
-        </ion-item>
-        <ion-list>
-          <ion-radio-group formControlName="MatialStatus">
-            <ion-item>
-              <ion-label><small>Single</small></ion-label>
-              <ion-radio value="single"></ion-radio>
-            </ion-item>
-            <ion-item>
-              <ion-label><small>Married</small></ion-label>
-              <ion-radio value="married"></ion-radio>
-            </ion-item>
-            <ion-item>
-              <ion-label><small>Widowed</small></ion-label>
-              <ion-radio value="widow"></ion-radio>
-            </ion-item>
-            <ion-item>
-              <ion-label><small>Divorced</small></ion-label>
-              <ion-radio value="divorced"></ion-radio>
-            </ion-item>
-            <ion-item>
-              <ion-label><small>Domestic Partnership</small></ion-label>
-              <ion-radio value="partner"></ion-radio>
-            </ion-item>
-          </ion-radio-group>
-        </ion-list>
-      </ion-card>
-
-      <ion-card>
-        <ion-item>
-          <ion-label><small>Do you have children? if yes, how many?</small></ion-label>
-        </ion-item>
-        <ion-item>
-          <ion-input formControlName="Children"></ion-input>
-        </ion-item>
-      </ion-card>
-
-      <ion-card>
-        <ion-item>
-          <ion-label><small>What is your current U.S. immigration status?</small></ion-label>
-        </ion-item><ion-list>
-          <ion-radio-group formControlName="ImmigrationStatus">
-            <ion-item>
-              <ion-label><small>F-1 without work authorization</small></ion-label>
-              <ion-radio value="F-1noPermit"></ion-radio>
-            </ion-item>
-            <ion-item>
-              <ion-label><small>F-1 with work permit based on financial hardship</small></ion-label>
-              <ion-radio value="F-1permit"></ion-radio>
-            </ion-item>
-            <ion-item>
-              <ion-label><small>F-1 CPT</small></ion-label>
-              <ion-radio value="F-1"></ion-radio>
-            </ion-item>
-            <ion-item>
-              <ion-label><small>F-1 Pre-Completion OPT</small></ion-label>
-              <ion-radio value="F-1preCompletion"></ion-radio>
-            </ion-item>
-            <ion-item>
-              <ion-label><small>F-1 Regular OPT</small></ion-label>
-              <ion-radio value="F-1regular"></ion-radio>
-            </ion-item>
-            <ion-item>
-              <ion-label><small>F-1 STEM OPT</small></ion-label>
-              <ion-radio value="F-1stem"></ion-radio>
-            </ion-item>
-            <ion-item>
-              <ion-label><small>J-1 without work authorization</small></ion-label>
-              <ion-radio value="J-1notAuthorized"></ion-radio>
-            </ion-item>
-            <ion-item>
-              <ion-label><small>J-1 work authorized</small></ion-label>
-              <ion-radio value="J-1authoized"></ion-radio>
-            </ion-item>
-            <ion-item>
-              <ion-label><small>DACA with work permit</small></ion-label>
-              <ion-radio value="DACApermit"></ion-radio>
-            </ion-item>
-            <ion-item>
-              <ion-label><small>DACA without work permit</small></ion-label>
-              <ion-radio value="DACAnoPermit"></ion-radio>
-            </ion-item>
-            <ion-item>
-              <ion-label><small>Green Card / Lawful Permanent Resident (LPR)</small></ion-label>
-              <ion-radio value="greenCard"></ion-radio>
-            </ion-item>
-            <ion-item>
-              <ion-label><small>Other</small></ion-label>
-              <ion-radio value="other"></ion-radio>
-            </ion-item>
-          </ion-radio-group>
-        </ion-list>
-        <ion-item>
-          <ion-label><small>If you chose other:</small></ion-label>
-          <ion-input formControlName="ImmigrationStatus"></ion-input>
-        </ion-item>
-      </ion-card>
-
-      <ion-item>
-        <ion-title>Financial Need</ion-title>
-      </ion-item>
-      <ion-card>
-        <ion-item>
-          <ion-label><small>How much financial assistance are you seeking?</small></ion-label>
-        </ion-item>
-        <ion-item>
-          <ion-label><small>$</small></ion-label>
-          <ion-input
-              inputmode="decimal"
-              type="number"
-              required=true
-              formControlName="Amount"></ion-input>
-        </ion-item>
-      </ion-card>
-
-      <ion-card>
-        <ion-item>
-          <ion-label><small>Why do you need support?</small></ion-label>
-        </ion-item>
-        <ion-item>
-          <ion-textarea
-              required=true
-              formControlName="Why"></ion-textarea>
-        </ion-item>
-      </ion-card>
-
-      <ion-card>
-        <ion-item>
-          <ion-text><small>If you or any family members have a situation that 
-            has caused to incur expenses, debts, or loss of income, describe 
-            the situation in the box below. Specify the amounts of the expenses, 
-            debts, and income losses in as much detail as possible. Examples may 
-            include medical expenses, job loss, eviction, and homelessness.</small></ion-text>
-        </ion-item>
-        <ion-item>
-          <ion-textarea formControlName="FamilyHardship"></ion-textarea>
-        </ion-item>
-      </ion-card>
-
-      <ion-card>
-        <ion-item>
-          <ion-text><small>Please provide documents that prove your current 
-            financial situation and status. This includes any federal income 
-            tax returns, bank statements, investment records, and records of 
-            untaxed income from either the United States or from your home country.</small></ion-text>
-        </ion-item>
-        <ion-item>
-          <ion-input
-          id="doc_input"
-          type="file" 
-          aria-label="File browser example"
-          (change)="loadImageFromDevice($event)"
-          formControlName="FinDocs"></ion-input>
-        </ion-item>
-      </ion-card>
-    </ion-list>
-
-    <div style="text-align: center">
-      <ion-button style="width:50%" type="submit" [routerLink]="['/tablinks']">
-        SUBMIT
-      </ion-button>
-    </div>
-  </form>
-
-
-  <!--
-  <ion-row>
-    <ion-text id="money_text">
-      Requested amount:
-    </ion-text>
-  </ion-row>
-  <ion-row>
-    <ion-input 
-            id="money_input"
-            placeholder="0.00" 
-            inputmode="decimal" 
-            [(ngModel)]="amounty" 
-            name="amount"></ion-input>
-  </ion-row>
-
-  <ion-row>
-    <ion-text id="justify_text">
-      Provide justification on why you need the money:
-    </ion-text>
-  </ion-row>
-  <ion-row>
-    <ion-textarea
-            id="justify_input"
-            placeholder="My family does not have enough funds. And I cannot afford my tuition."
-            [(ngModel)]="justification" 
-            name="reason"></ion-textarea>
-  </ion-row>
-
-  <ion-row>
-    <ion-text id="doc_text">
-      Attach Documents
-    </ion-text>
-  </ion-row>
-  <ion-row>
-    <ion-text id="doc_description">
-      Please provide all financial evidence, 
-      including bank statements and bills
-    </ion-text>
-  </ion-row>
-  <ion-row>
--->
-    <!-- https://forum.ionicframework.com/t/ion-input-type-file-full-path/101790 -->
-<!--
-    <ion-input 
-            id="doc_input"
-            type="file" 
-            aria-label="File browser example"
-            accept="image/*" 
-            (change)="loadImageFromDevice($event)"></ion-input>
-  </ion-row>
-
-  <ion-row>
-    <ion-button [routerLink]="['/tablinks']" id="submit_button">
-      SUBMIT
-    </ion-button>
-  </ion-row>
-  -->
+<ion-content>
+  <ion-button fill=clear [routerLink]="['/tablinks/request-aid']" id="back_button">
+    <ion-icon name="arrow-back"></ion-icon>
+  </ion-button>
+    <ion-content overflow-scroll="true">
+       <iframe id="JotFormIFrame-220387163810048" 
+       title="Apply for Aid" 
+       onload="window.parent.scrollTo(0,0)" 
+       allowtransparency="true" 
+       allowfullscreen="true" 
+       allow="geolocation; microphone; camera" 
+       src="https://form.jotform.com/220387163810048" 
+       frameborder="0" 
+       style=" min-width: 100%; height:100%; border:none;" > 
+      </iframe> 
+    </ion-content>
+</ion-content>
