--- a/src/app/apply-aid/apply-aid.page.html
+++ b/src/app/apply-aid/apply-aid.page.html
@@ -1,3 +1,5 @@
+// This page links to the Jot form that we created for the apply aid page on the app
+// The Jot form links to a Google sheet on the CFGI Gmail account
 
 <ion-content>
   <ion-button fill=clear [routerLink]="['/tablinks/request-aid']" id="back_button">
