--- a/src/app/appointments/appointments.page.html
+++ b/src/app/appointments/appointments.page.html
@@ -1,3 +1,5 @@
+// ionic code for the back button
+
 <ion-content>
   <ion-row>
     <ion-button fill=clear [routerLink]="['/tablinks/legal']" id="back_button">
