--- a/src/app/david-modal/david-modal.page.html
+++ b/src/app/david-modal/david-modal.page.html
@@ -18,6 +18,8 @@
         </tr>
       </table>
     </ion-card-content>
+    // same scss as sophie's modal 
+    // here is the information that pops up as you click on David's model 
     <ion-card-content>
       <ion-text id="sophie_info"> David Valverde Vargas was born in Costa Rica and moved to Germany at the age of seven. He came to the U.S. as an international student. David attended Rollins College and University of Utah, majoring in International Trade and Commerce and minoring in Computer Science. David’s fascination with artificial intelligence and software led him to meeting his co-founders at Grabb-it. They participated in YCombinator’s Summer ‘18 batch and moved to Silicon Valley. David is now the founder of PRANOS.ai, the proprietary broadcast system converts your car windows into transparent HD displays. Pranos’ GRID is an ecosystem where drivers can opt in to earn as they drive through the ad revenue generated on their displays. Pranos aims to create many jobs through the growth of the gig economy.</ion-text>
     </ion-card-content>
